k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quasselstrippe
  labels:
    app.kubernetes.io/name: quasselstrippe
    app.kubernetes.io/part-of: quasselstrippe
